--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "path": "^0.12.7",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0"
   },
